# lake

./: .gitignore  CMakeLists.txt  README.md  adder.v  alu.v  cc.sh  ctrl.v  dec.v  dmem.v  entry.s  imem.v  immgen.v  lake.v  link.ld  mux2.v  mux4.v  pc.v  prog.c  regfile.v
.devcontainer/: Dockerfile  devcontainer.json
tests/: lake_test.cc
